add fiber config loading